# QuadRotorSim

./: CMakeLists.txt  README.md  version.h.in
include/: version.h
include/LQRController/: LQRController.hpp
include/QuadrotorDynamics/: QuadrotorDynamics.hpp
include/QuaternionUtils/: quaternion_op.hpp
include/SlidingModeController/: SlidingModeController.hpp
include/TinyMPC_Controller/: tinympc_controller.hpp  types.hpp
src/: main.cpp
src/LQRController/: LQRController.cpp
src/QuadrotorDynamics/: QuadrotorDynamics.cpp
src/QuaternionUtils/: quaternion_op.cpp
src/SlidingModeController/: SlidingModeController.cpp
src/TinyMPC_Controller/: tinympc_controller.cpp
